# HENDRICS

./: .gitignore  .gitmodules  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  .travis.yml  CHANGELOG.rst  CITATION  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  TODO.md  __init__.py  ah_bootstrap.py  appveyor.yml  codecov.yml  gpu.py  mp_base.py  mp_calibrate.py  mp_create_gti.py  mp_fspec.py  mp_io.py  mp_lags.py  mp_lcurve.py  mp_pds.py  mp_read_events.py  mp_readfile.py  mp_rebin.py  mp_save_as_xspec.py  mp_scrunch_lc.py  mp_sum_fspec.py  mpfspec  mpreadfile  mpscrunchlc  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-changelog.yml  ci_test.yml
ci_scripts/travis/: install_miniconda.sh
docs/: conf.py  index.rst  install.rst  readthedocs-environment.yml  readthedocs.yml  tutorial.rst
docs/changes/: 180.feature.rst  192.feature.rst  193.trivial.rst  194.feature.rst  194.trivial.rst  195.bugfix.rst
docs/hendrics/: hendrics.rst  index.rst  modules.rst
docs/maltpynt/: maltpynt.rst  modules.rst
docs/scripts/: cli.rst
docs/source/: cli.rst  conf.py  index.rst  install.rst  introduction.rst  tutorial.rst
docs/source/maltpynt/: maltpynt.rst
docs/tutorials/: agn.rst  data_exploration.rst  index.rst  pulsars.rst  quicklook.rst  reverberation.rst  simulation.rst  variability.rst
hendrics/: __init__.py  _astropy_init.py  base.py  binary.py  calibrate.py  colors.py  conftest.py  create_gti.py  efsearch.py  exposure.py  exvar.py  fake.py  ffa.py  fold.py  fspec.py  io.py  lcurve.py  logging_setup.py  ml_timing.py  modeling.py  parallel.py  phaseogram.py  phasetag.py  plot.py  power_colors.py  read_events.py  rebin.py  save_as_xspec.py  setup_package.py  sum_fspec.py  timelags.py  varenergy.py
hendrics/compat/: __init__.py  compatibility.py
hendrics/compat/datasets/: xselect.mdb
hendrics/licenses/: LICENSE.rst
hendrics/tests/: __init__.py  test_a_complete_run.py  test_base.py  test_binary.py  test_calibrate.py  test_colors.py  test_efsearch.py  test_exposure.py  test_fake.py  test_ffa.py  test_fspec.py  test_fullrun.py  test_gti.py  test_io.py  test_lc.py  test_ml_timing.py  test_parallel.py  test_phaseogram.py  test_phasetag.py  test_read_events.py  test_unit.py
hendrics/tests/data/: monol_testA.evt  monol_testA_mjdref.evt  monol_testA_nomission.evt  monol_testA_sort.evt  monol_testA_timezero.evt  monol_testA_timezero_gti.evt  monol_testA_uf.evt  monol_testB.evt
maltpynt/: __init__.py  _astropy_init.py  base.py  calibrate.py  conftest.py  create_gti.py  exposure.py  fake.py  fspec.py  io.py  lags.py  lcurve.py  modeling.py  mp_base.py  mp_calibrate.py  mp_create_gti.py  mp_exposure.py  mp_fold.py  mp_fspec.py  mp_io.py  mp_lags.py  mp_lcurve.py  mp_plot.py  mp_read_events.py  mp_rebin.py  mp_save_as_xspec.py  mp_sum_fspec.py  plot.py  read_events.py  rebin.py  save_as_xspec.py  sum_fspec.py
maltpynt/tests/: test_fullrun.py  test_io.py  test_lc.py  test_read_events.py  test_unit.py
maltpynt/tests/data/: lcurveA.fits  monol_testA.evt
maltpynt_reboot/: conftest.py  fake.py  rebin.py  save_as_xspec.py
notebooks/: Check dead time algorithm in HENDRICS.ipynb  deadtime_model_zhang.py
scripts/: MP2xspec  MPcalibrate  MPcreategti  MPdumpdyn  MPfspec  MPlags  MPlcurve  MPplot  MPreadevents  MPreadfile  MPrebin  MPscrunchlc  MPsumfspec  mpcalibrate  mpreadevents
tests/: __init__.py  fullrun.py  test_cpds.py  test_cross_gtis.py  test_lc.py  test_pds.py  test_scrunch.py  utests.py
tests/data/: A.evt  B.evt  lcurveA.fits  monol_testA_timezero.evt  monol_testB.evt
travis_scripts/: install.sh  install_miniconda.sh  install_netcdf.sh
