[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
doctest_plus = enabled
norecursedirs = "docs[\/]_build" "docs[\/]generated" "astropy[\/]extern"
text_file_format = rst
open_files_ignore = "astropy.log" "/etc/hosts"
remote_data_strict = true
addopts = -p no:warnings --doctest-rst
asdf_schema_root = astropy/io/misc/asdf/data/schemas
xfail_strict = true
qt_no_exception_capture = 1

[options]
requires = numpy
zip_safe = False
tests_require = pytest-astropy
setup_requires = numpy>=1.13
install_requires = numpy>=1.13
python_requires = >=3.6

[ah_bootstrap]
auto_use = True

[metadata]
name = hendrics
description = "High ENergy Data Reduction Interface from the Command Shell"
long_description = Spectral-timing analysis of X-ray satellite data
author = Matteo Bachetti
author_email = matteo@matteobachetti.it
license = BSD
url = http://hendrics.readthedocs.io
edit_on_github = False
github_project = StingraySoftware/HENDRICS
version = 5.0.dev
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options.entry_points]
console_scripts =
    HEN2xspec = hendrics.save_as_xspec:main
    HENbaseline = hendrics.lcurve:baseline_main
    HENbinary = hendrics.binary:main_presto
    HENcalibrate = hendrics.calibrate:main
    HENcolors = hendrics.colors:main
    HENcreategti = hendrics.create_gti:main
    HENdeorbit = hendrics.fold:main_deorbit
    HENdumpdyn = hendrics.fspec:dumpdyn_main
    HENefsearch = hendrics.efsearch:main_efsearch
    HENexcvar = hendrics.exvar:main
    HENexposure = hendrics.exposure:main
    HENfake = hendrics.fake:main
    HENfold = hendrics.fold:main_fold
    HENfspec = hendrics.fspec:main
    HENjoinevents = hendrics.read_events:main_join
    HENlags = hendrics.timelags:main
    HENlcurve = hendrics.lcurve:main
    HENmodel = hendrics.modeling:main_model
    HENphaseogram = hendrics.phaseogram:main_phaseogram
    HENphasetag = hendrics.phasetag:main_phasetag
    HENplot = hendrics.plot:main
    HENreadevents = hendrics.read_events:main
    HENreadfile = hendrics.io:main
    HENrebin = hendrics.rebin:main
    HENscrunchlc = hendrics.lcurve:scrunch_main
    HENsumfspec = hendrics.sum_fspec:main
    HENvarenergy = hendrics.varenergy:main
    HENzsearch = hendrics.efsearch:main_zsearch
